# Idea-Drop-Box

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.build.json  vite.config.ts  启动项目.bat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/main/: deepseek.ts  reports.ts  settings.ts
src/renderer/: App.tsx  startupRetry.ts  styles.css  tauriApi.ts
src/shared/: date.ts  types.ts
tests/: date.test.ts  deepseek.test.ts  renderer-retry.test.ts  reports.test.ts  settings.test.ts  start-script.test.ts  tauri-capabilities.test.ts
tools/: make_video_cover.py
