[package]
name = "idea-drop-box"
version = "0.1.0"
description = "Desktop idea collector with DeepSeek daily reports."
authors = ["Idea Drop Box"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }
